# prescreen_question_1

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-build.yml
src/: new_solution.py  sequence_solver.py
tests/: test_subsequence_solution_whensel.py
