[tool.poetry]
name = "subsequence_solution_whensel"
version = "0.1.0"
description = ""
authors = ["William Hensel <will.hensel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^22.1.0"
typed-ast = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
runapp = "sandbox.cli:run"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
